# MacPak

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
MacLarian/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
MacLarian/data/: speakers_db.json
MacLarian/src/: error.rs  gr2_extraction.rs  lib.rs
MacLarian/src/cli/: mod.rs  progress.rs
MacLarian/src/cli/commands/: convert.rs  create.rs  definitions.rs  diff.rs  execute.rs  extract.rs  gr2.rs  list.rs  loca.rs  mod.rs  mod_cmd.rs  pak.rs  search.rs  texture.rs  virtual_texture.rs  wem.rs
MacLarian/src/compression/: fastlz.rs  lz4.rs  mod.rs  zstd.rs
MacLarian/src/converter/: loca_to_xml.rs  lsf_to_lsx.rs  lsj_to_lsx.rs  lsx_to_lsf.rs  lsx_to_lsj.rs  mod.rs
MacLarian/src/converter/dds_png/: decode.rs  encode.rs  mod.rs  types.rs
MacLarian/src/converter/gltf_to_gr2/: gltf_loader.rs  gr2_writer.rs  mod.rs  utils.rs
MacLarian/src/converter/gr2_gltf/: mod.rs  shared.rs  types.rs
MacLarian/src/converter/gr2_to_gltf/: gltf_builder.rs  gr2_reader.rs  mod.rs  utils.rs
MacLarian/src/converter/loca/: loca_to_xml.rs  mod.rs  xml_to_loca.rs
MacLarian/src/converter/lsf_lsx_lsj/: lsf_to_lsj.rs  lsf_to_lsx.rs  lsj_to_lsf.rs  lsj_to_lsx.rs  lsx_to_lsf.rs  lsx_to_lsj.rs  mod.rs
MacLarian/src/dialog/: difficulty.rs  embedded.rs  export.rs  flags.rs  localization.rs  mod.rs  parser.rs  speakers.rs  types.rs
MacLarian/src/diff/: lsx_diff.rs  merge.rs  mod.rs  types.rs
MacLarian/src/dyes/: generators.rs  parsers.rs  registry.rs  types.rs
MacLarian/src/formats/: common.rs  lsbc.rs  lsf.rs  lsj.rs  lsx.rs  meta.rs  mod.rs  voice_meta.rs
MacLarian/src/formats/common/: hash.rs  mod.rs  types.rs
MacLarian/src/formats/dialog/: embedded.rs  flags.rs  localization.rs  mod.rs  parser.rs  types.rs
MacLarian/src/formats/gr2/: bitknit.rs  decompress.rs  decompressor.rs  file.rs  format.rs  inspect.rs  mod.rs  parser.rs  range_decoder.rs  type_system.rs
MacLarian/src/formats/loca/: editor.rs  mod.rs  reader.rs  translation.rs  writer.rs
MacLarian/src/formats/lsf/: document.rs  mod.rs  reader.rs  string_table.rs  writer.rs
MacLarian/src/formats/lsj/: document.rs  mod.rs  reader.rs  writer.rs
MacLarian/src/formats/lsx/: document.rs  mod.rs  reader.rs  writer.rs
MacLarian/src/formats/virtual_texture/: extractor.rs  gtp.rs  gts.rs  mod.rs  utils.rs
MacLarian/src/formats/wem/: cache.rs  decoder.rs  mod.rs
MacLarian/src/gr2_extraction/: dds.rs  mod.rs  types.rs  virtual_textures.rs
MacLarian/src/merged/: embedded.rs  game_data.rs  mod.rs  parser.rs  paths.rs  resolver.rs  types.rs
MacLarian/src/mods/: batch_validate.rs  info_json.rs  meta_generator.rs  mod.rs  types.rs  validation.rs
MacLarian/src/pak/: batch.rs  creator.rs  extraction_options.rs  extractor.rs  lister.rs  mod.rs  pak_tools.rs  smart_extract.rs
MacLarian/src/pak/lspk/: mod.rs  reader.rs  types.rs  writer.rs
MacLarian/src/pak/pak_tools/: cache.rs  decompression.rs  helpers.rs  mod.rs  operations.rs
MacLarian/src/search/: builder.rs  content_cache.rs  extract.rs  fulltext.rs  mod.rs  persistence.rs  search_methods.rs  types.rs
MacLarian/src/utils/: hash.rs  lsf_types.rs  mod.rs  path.rs  string_table.rs
MacLarian/src/virtual_texture/: batch.rs  extractor.rs  gtp.rs  gts.rs  mod.rs  mod_config.rs  types.rs  utils.rs
MacLarian/src/virtual_texture/builder/: compression.rs  config.rs  deduplication.rs  geometry.rs  mod.rs  tile_processor.rs
MacLarian/src/virtual_texture/gtp/: accessors.rs  extract.rs  mod.rs  read_header.rs
MacLarian/src/virtual_texture/gts/: accessors.rs  mod.rs  read_header.rs  read_sections.rs
MacLarian/src/virtual_texture/mod_config/: discovery.rs  loaders.rs  lookup.rs  mod.rs  types.rs
MacLarian/src/virtual_texture/writer/: fourcc.rs  gtp_writer.rs  gts_writer.rs  mod.rs
MacLarian/tests/: integration_test.rs
MacPak/: Cargo.toml
MacPak/src/: error.rs  lib.rs  utils.rs
MacPak/src/cli/: mod.rs
MacPak/src/cli/commands/: convert.rs  create.rs  extract.rs  gr2.rs  list.rs  mod.rs  virtual_texture.rs  wem.rs
MacPak/src/dialog/: difficulty.rs  flags.rs  localization.rs  mod.rs  parser.rs  speakers.rs  types.rs
MacPak/src/dyes/: generators.rs  mod.rs  parsers.rs  registry.rs  types.rs
MacPak/src/formats/: mod.rs  voice_meta.rs
MacPak/src/formats/wem/: cache.rs  decoder.rs  mod.rs
MacPak/src/gui/: mod.rs  native_menu.rs
MacPak/src/gui/shared/: drop_zone.rs  mod.rs  progress.rs  results.rs  styles.rs  theme.rs
MacPak/src/gui/state/: browser.rs  config.rs  dialogue.rs  dyes.rs  editor.rs  gr2.rs  (+7 more)
MacPak/src/index/: database.rs  indexer.rs  mod.rs  search.rs
MacPak/src/operations/: conversion.rs  extraction.rs  gr2.rs  mod.rs  validation.rs  virtual_texture.rs
MacPak/src/search/: builder.rs  content_cache.rs  extract.rs  fulltext.rs  mod.rs  persistence.rs
MacPak/src/viewer/: bones.rs  camera.rs  mod.rs  scene.rs  types.rs  ui.rs
MacPak/src/workbench/: mod.rs  recipe.rs  settings.rs
MacPak/src/workspace/: mod.rs  project.rs  recipe.rs  scaffold.rs  settings.rs
macpak-bevy/: Cargo.toml  README.md
macpak-bevy/src/: bones.rs  camera.rs  main.rs  scene.rs  types.rs  ui.rs
macpak-cli/: Cargo.toml  README.md
macpak-cli/src/: cli.rs  main.rs
macpak-cli/src/commands/: convert.rs  create.rs  extract.rs  gr2.rs  index.rs  list.rs  mod.rs  validate.rs  virtual_texture.rs
macpak-gui/: Cargo.toml  build.rs
macpak-gui/src/: app.rs  config.rs  main.rs  native_menu.rs  state.rs  theme.rs
macpak-gui/src/app/: state.rs
macpak-gui/src/state/: app.rs  dyes.rs  editor.rs  gr2.rs  mod.rs  pak_ops.rs  tools.rs  virtual_textures.rs
macpak-gui/src/tabs/: asset_browser.rs  browser.rs  editor.rs  mod.rs  pak_operations.rs  pak_ops.rs  search.rs  tools.rs  uuid_gen.rs  uuid_generator.rs
macpak-gui/src/utils/: handle.rs  meta_dialog.rs  mod.rs  uuid.rs
macpak-gui/ui/: app.slint
macpak-gui/ui/components/: common.slint
macpak-gui/ui/dialogs/: about.slint
macpak-gui/ui/tabs/: asset_browser.slint  index_search.slint  pak_operations.slint  universal_editor.slint  uuid_generator.slint
(+275 files in other folders)
