[workspace]
members = [
    "MacPak",       # library crate
    "MacLarian",    # internal engine crate
    "macpak-cli",   # CLI crate
    "macpak-gui"    # GUI crate
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CyberDeco <you@example.com>"]
license = "MIT OR Apache-2.0"

# Workspace-wide shared dependencies
[workspace.dependencies]
anyhow = "1.0"
bincode = "2.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
thiserror = "1.0"
rfd = "0.14"
eframe = { version = "0.28", default-features = false, features = ["accesskit", "wayland", "glow", "x11"] }
pretty_assertions = "1.4"

# For LSF/PAK handling:
indexmap = "2.0"
lz4 = "1.24"
lz4_flex = "0.11"
flate2 = "1.0"
quick-xml = "0.31"
byteorder = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
walkdir = "2.4"
crc32fast = "1.4"
larian-formats = "0.3.0"

# Internal crates
[workspace.dependencies.MacPak]
version = "0.1.0"
path = "./MacPak"

[workspace.dependencies.MacLarian]
version = "0.1.0"
path = "./MacLarian"

# Lints for the workspace
[workspace.lints.clippy]
all = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
too-many-arguments = { level = "allow" }
multiple-crate-versions = { level = "allow" }

[workspace.lints.rust]
unsafe_code = "forbid"