[workspace]
members = [
    "MacPak",          # library crate
    "MacLarian",       # internal engine crate
    "macpak-cli",      # CLI crate
    "macpak-gui",      # GUI crate (Floem)
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CyberDeco"]
license = "PolyForm Noncommercial License 1.0.0"

# Workspace-wide shared dependencies
[workspace.dependencies]
anyhow = "1.0"
bincode = "2.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.5"
thiserror = "1.0"
rfd = "0.14"
eframe = { version = "0.28", default-features = false, features = ["accesskit", "wayland", "glow", "x11"] }
pretty_assertions = "1.4"

# For LSF/PAK handling:
im = "15.1"
indexmap = "2.0"
lz4_flex = "0.11"
fastlz-rs = "0.0.3"
flate2 = "1.0"
zstd = "0.13"
quick-xml = "0.31"
byteorder = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
walkdir = "2.4"
crc32fast = "1.4"
lazy_static = "1.4"

# For 3D model/mesh/texture handling
gltf = "1.4.1"
# collada = "0.16.0" # .dae files, Blender deprecated
ddsfile = "0.5.2"
# image_dds = "0.7.2" # unsure if needed
glam = "0.27" # 3D math (vectors, quaternions, matrices)
half = { version = "2.6", features = ["bytemuck", "serde"] } # IEEE 754 half-precision floats (f16)
bytemuck = { version = "1.14", features = ["derive"] } # Safe zero-copy type casting
libloading = "0.8.9"
# bevy = "0.17.2" # eventual GUI preview

# Internal crates
[workspace.dependencies.MacPak]
version = "0.1.0"
path = "./MacPak"

[workspace.dependencies.MacLarian]
version = "0.1.0"
path = "./MacLarian"

# Lints for the workspace
[workspace.lints.clippy]
all = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
too-many-arguments = { level = "allow" }
multiple-crate-versions = { level = "allow" }

[workspace.lints.rust]
unsafe_code = "forbid"
