[workspace]
members = [
    "MacPak",          # Main crate: library + GUI + CLI + Viewer binaries
    "MacLarian",       # Internal engine crate (file formats)
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CyberDeco"]
license-file = "LICENSE"
repository = "https://github.com/CyberDeco/MacPak"
readme = "README.md"
keywords = ["bg3", "baldurs-gate-3", "modding", "larian", "pak", "gr2", "granny2"]

# Workspace-wide shared dependencies
[workspace.dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
rfd = "0.14"
# eframe = { version = "0.28", default-features = false, features = ["accesskit", "wayland", "glow", "x11"] }
pretty_assertions = "1.4"

# For LSF/PAK handling:
im = "15.1"
indexmap = "2.0"
lz4_flex = "0.11"
fastlz-rs = "0.0.3"
flate2 = "1.0"
# zstd = "0.13"
# ruzstd = { version = "0.7", default-features = false, features = ["std"] } throws error but can be implemented

quick-xml = "0.31"
byteorder = "1.5"
tracing = "0.1"

tracing-subscriber = "0.3"
base64 = "0.22"
walkdir = "2.4"
rayon = "1.10"
tantivy = "0.22"
crc32fast = "1.4"
lazy_static = "1.4"
tempfile = "3.14"
md5 = "0.7"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# For 3D model/mesh/texture handling
gltf = "1.4.1"
# collada = "0.16.0" # .dae files, Blender deprecated
ddsfile = "0.5.2"
image = { version = "0.25", default-features = false, features = ["png"] }
# image_dds = "0.7.2" # unsure if needed
glam = "0.27" # 3D math (vectors, quaternions, matrices)
half = { version = "2.6", features = ["bytemuck", "serde"] } # IEEE 754 half-precision floats (f16)
bytemuck = { version = "1.14", features = ["derive"] } # Safe zero-copy type casting
libloading = "0.8.9"
# bevy = "0.17.2" # eventual GUI preview

# Internal crates
[workspace.dependencies.macpak]
version = "0.1.0"
path = "./MacPak"

[workspace.dependencies.maclarian]
version = "0.1.0"
path = "./MacLarian"

# Lints for the workspace
[workspace.lints.clippy]
all = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
too-many-arguments = { level = "allow", priority = 1 }
multiple-crate-versions = { level = "allow", priority = 1 }
case-sensitive-file-extension-comparisons = { level = "allow", priority = 1 } # paths are lowercased before comparison
unreadable-literal = { level = "allow", priority = 1 } # hex magic numbers and bit masks are more readable without separators
similar-names = { level = "allow", priority = 1 } # lsx_doc/lsj_doc/lsf_doc are intentionally similar
single-char-binding-names = { level = "allow", priority = 1 } # math variables like x, y, z are clearer short
match-same-arms = { level = "allow", priority = 1 } # explicit arms for documentation even when same as wildcard
unused-self = { level = "allow", priority = 1 } # methods kept as methods for API consistency
unnecessary-wraps = { level = "allow", priority = 1 } # Result/Option returns for API consistency and future error handling

[workspace.lints.rust]
unsafe_code = "forbid"
