[package]
name = "MacLarian"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
indexmap = { workspace = true, features = ["serde"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Compression
flate2.workspace = true         # ZLIB/GZIP compression
lz4.workspace = true            # LZ4 frame compression (writing LSF)
lz4_flex.workspace = true       # LZ4 block compression (reading LSF)
zstd.workspace = true           # Zstandard compression (newer PAK files)

# Binary I/O
byteorder.workspace = true       # Reading/writing little-endian data

# 3D Math & Vertex Processing
glam.workspace = true            # SIMD-optimized vectors, quaternions, matrices
half.workspace = true            # IEEE 754 half-precision floats (f16)
bytemuck.workspace = true        # Safe zero-copy type casting

# Encoding
base64.workspace = true          # Base64 encoding for ScratchBuffer type

# Hashing
crc32fast.workspace = true       # CRC32 checksums for PAK files

# File system
walkdir.workspace = true         # Recursive directory traversal

# Logging
tracing.workspace = true         # Structured logging

# Utilities
lazy_static.workspace = true     # Static initialization for GR2 magic signatures

[dev-dependencies]
pretty_assertions.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

