[package]
name = "maclarian"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
description = "Larian file format library for Baldur's Gate 3 - PAK, LSF, LSX, GR2, DDS, and more"
categories = ["parser-implementations", "game-development", "encoding"]
homepage = "https://github.com/CyberDeco/MacPak"
exclude = ["data/", ".DS_Store"]

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
indexmap = { workspace = true, features = ["serde"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Compression
flate2.workspace = true         # ZLIB/GZIP compression
lz4_flex.workspace = true       # LZ4 compression (reading/writing LSF)
# zstd.workspace = true           # Zstandard compression (newer PAK files)

fastlz-rs.workspace = true      # FastLZ compression (virtual textures)

# Binary I/O
byteorder.workspace = true       # Reading/writing little-endian data

# Audio decoding (WEM files use vgmstream-cli externally)

# 3D Math & Vertex Processing
glam.workspace = true            # SIMD-optimized vectors, quaternions, matrices
half.workspace = true            # IEEE 754 half-precision floats (f16)
bytemuck.workspace = true        # Safe zero-copy type casting
gltf.workspace = true            # glTF 2.0 export (includes gltf-json)

# Encoding
base64.workspace = true          # Base64 encoding for ScratchBuffer type

# Hashing
crc32fast.workspace = true       # CRC32 checksums for PAK files
md5.workspace = true             # MD5 checksums for info.json

# Time
chrono.workspace = true          # Timestamps for info.json

# UUID generation
uuid.workspace = true            # UUID generation for mod files

# File system
walkdir.workspace = true         # Recursive directory traversal
tempfile.workspace = true        # Temp directories for LSF→LSX conversion

# Parallelism
rayon.workspace = true

# Full-text search
tantivy.workspace = true

# Logging
tracing.workspace = true         # Structured logging

# Image/Texture handling
ddsfile.workspace = true         # DDS texture file format
image.workspace = true           # PNG/image format support

[features]
default = []
audio = []  # Enables vgmstream-based WEM decoding
cli = ["dep:clap", "dep:tracing-subscriber"]  # CLI binary

# CLI dependencies (optional)
[dependencies.clap]
version = "4.4"
features = ["derive", "cargo"]
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[[bin]]
name = "maclarian"
path = "src/bin/maclarian.rs"
required-features = ["cli"]

[dev-dependencies]
pretty_assertions.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
