[package]
name = "maclarian"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["CyberDeco"]
license-file = "LICENSE"
repository = "https://github.com/CyberDeco/MacPak/tree/main/MacLarian"
readme = "README.md"
description = "Larian file format library for Baldur's Gate 3 - PAK, LSF, LSX, GR2, DDS, and more"
keywords = ["bg3", "baldurs-gate-3", "modding", "larian", "pak", "gr2", "granny2", "bitknit", "glTF"]
categories = ["development-tools", "encoding", "game-development", "parser-implementations"]
homepage = "https://github.com/CyberDeco/MacPak"
documentation = "https://docs.rs/maclarian"
exclude = [".ipynb_checkpoints/", ".DS_Store"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
quick-xml = { version = "0.31", features = ["serialize"] }
indexmap = { version = "2.0", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Compression
flate2 = "1.0"              # ZLIB/GZIP compression
lz4_flex = "0.11"           # LZ4 compression (reading/writing LSF)
fastlz-rs = "0.0.3"         # FastLZ compression (virtual textures)
zip = { version = "2.1", default-features = false, features = ["deflate", "time"] }  # ZIP archive creation
sevenz-rust = "0.6"         # 7z archive creation (mod packaging)

# Binary I/O
byteorder = "1.5"           # Reading/writing little-endian data

# 3D Math & Vertex Processing
glam = "0.27"               # SIMD-optimized vectors, quaternions, matrices
half = { version = "2.6", features = ["bytemuck", "serde"] }  # IEEE 754 half-precision floats (f16)
bytemuck = { version = "1.14", features = ["derive"] }        # Safe zero-copy type casting
gltf = "1.4.1"              # glTF 2.0 export (includes gltf-json)

# Encoding
base64 = "0.22"             # Base64 encoding for ScratchBuffer type

# Hashing
crc32fast = "1.4"           # CRC32 checksums for PAK files
md5 = "0.7"                 # MD5 checksums for info.json

# Time
chrono = "0.4"              # Timestamps for info.json

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# File system
walkdir = "2.4"             # Recursive directory traversal
dirs = "5.0"                # Platform-specific directories (cache, data)
tempfile = "3.14"           # Temp directories for LSF→LSX conversion
shellexpand = "3.1"         # Tilde expansion for paths

# Parallelism
rayon = "1.10"

# Logging
tracing = "0.1"             # Structured logging

# Image/Texture handling
bcdec_rs = "0.2"            # BC7 texture decompression
ddsfile = "0.5.2"           # DDS texture file format
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber", "dep:indicatif", "dep:console"]

# CLI dependencies (optional)
[dependencies.clap]
version = "4.4"
features = ["derive", "cargo"]
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[dependencies.indicatif]
version = "0.17"
optional = true

[dependencies.console]
version = "0.15"
optional = true

[[bin]]
name = "maclarian"
path = "src/bin/maclarian.rs"
required-features = ["cli"]

[dev-dependencies]
pretty_assertions = "1.4"
tracing-subscriber = "0.3"

[lints.clippy]
all = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
too-many-arguments = { level = "allow", priority = 1 }
multiple-crate-versions = { level = "allow", priority = 1 }
case-sensitive-file-extension-comparisons = { level = "allow", priority = 1 }
unreadable-literal = { level = "allow", priority = 1 }
similar-names = { level = "allow", priority = 1 }
many-single-char-names = { level = "allow", priority = 1 }
match-same-arms = { level = "allow", priority = 1 }
unused-self = { level = "allow", priority = 1 }
unnecessary-wraps = { level = "allow", priority = 1 }
# Casting lints - acceptable in file format handling and progress calculations
cast-precision-loss = { level = "allow", priority = 1 }
cast-possible-truncation = { level = "allow", priority = 1 }
cast-possible-wrap = { level = "allow", priority = 1 }
cast-sign-loss = { level = "allow", priority = 1 }
cast-lossless = { level = "allow", priority = 1 }
# Documentation lints - to be addressed in future doc improvements
missing-errors-doc = { level = "allow", priority = 1 }
missing-panics-doc = { level = "allow", priority = 1 }
# Other acceptable pedantic lints
must-use-candidate = { level = "allow", priority = 1 }
fn-params-excessive-bools = { level = "allow", priority = 1 }
struct-excessive-bools = { level = "allow", priority = 1 }
too-many-lines = { level = "allow", priority = 1 }
# CLI progress patterns commonly use if !quiet { progress } else { simple }
if-not-else = { level = "allow", priority = 1 }
map-unwrap-or = { level = "allow", priority = 1 }

[lints.rust]
unsafe_code = "forbid"
