[package]
name = "MacPak"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BG3 modding toolkit for macOS"

[dependencies]
# Internal
MacLarian.workspace = true

# Workspace dependencies
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true