[package]
name = "macpak"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
description = "BG3 modding toolkit for macOS - GUI and 3D viewer for Baldur's Gate 3 mod files"

# Binary definitions
[[bin]]
name = "MacPak"
path = "src/bin/macpak.rs"
required-features = ["gui"]

[[bin]]
name = "macpak-viewer"
path = "src/bin/macpak-viewer.rs"
required-features = ["viewer"]

[features]
default = ["gui"]
gui = [
    "dep:floem",
    "dep:floem_reactive",
    "dep:floem_renderer",
    "dep:uuid",
    "dep:rfd",
    "dep:walkdir",
    "dep:lazy_static",
    "dep:chrono",
    "dep:regex",
    "dep:rand",
    "dep:image",
    "dep:dds",
    "dep:sha2",
    "dep:md5",
    "dep:roxmltree",
    "dep:im",
    "dep:muda",
    "dep:dispatch",
    # Audio playback
    "dep:rodio",
    "dep:byteorder",
    # Parallel processing for voice metadata loading
    "dep:rayon",
    # Config persistence
    "dep:dirs",
]
viewer = [
    "gui",  # viewer requires gui
    "dep:bevy",
    "dep:clap",
]
full = ["gui", "viewer"]

[dependencies]
# Internal - always needed (no CLI feature needed for GUI)
maclarian = { workspace = true }

# Core dependencies - always needed
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# GUI dependencies (optional)
floem = { version = "0.2", optional = true }
floem_reactive = { version = "0.2", optional = true }
floem_renderer = { version = "0.2", optional = true }
uuid = { version = "1.0", default-features = false, features = ["v4", "std"], optional = true }
rfd = { version = "0.14", optional = true }
walkdir = { version = "2.4", optional = true }
lazy_static = { version = "1.4", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"], optional = true }
regex = { version = "1.10", default-features = false, features = ["std", "perf"], optional = true }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"], optional = true }
dds = { version = "0.2", optional = true }
sha2 = { version = "0.10", optional = true }
md5 = { version = "0.7", optional = true }
roxmltree = { version = "0.20", optional = true }
im = { version = "15.1", optional = true }
muda = { version = "0.15", optional = true }
dispatch = { version = "0.2", optional = true }
# Audio playback dependencies (for dialogue voice playback)
rodio = { version = "0.19", default-features = false, features = ["vorbis"], optional = true }
byteorder = { version = "1.5", optional = true }
# Parallel processing
rayon = { version = "1.10", optional = true }
# Config persistence
dirs = { version = "5.0", optional = true }

# Viewer dependencies (optional)
clap = { version = "4.4", features = ["derive", "cargo"], optional = true }
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_gizmos",
    "bevy_scene",
    "bevy_camera",
    "bevy_light",
    "bevy_mesh",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_text",
    "bevy_post_process",
    "tonemapping_luts",
    "default_font",
    "multi_threaded",
    "zstd_rust",
    "reflect_auto_register",
], optional = true }

[lints]
workspace = true
