[package]
name = "macpak-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "macpak-bevy"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_scene",
    "tonemapping_luts",
    "default_font",
    "multi_threaded",
] }
clap = { version = "4.4", features = ["derive"] }

[lints]
workspace = true
