[package]
name = "macpak-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for BG3 modding"

[[bin]]
name = "macpak-cli"
path = "src/main.rs"

[dependencies]
# Internal
MacLarian.workspace = true
MacPak.workspace = true

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
# indicatif = "0.17"
# console = "0.15"
# colored = "2.1"

# Workspace dependencies
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true