[package]
name = "macpak-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Slint GUI application for BG3 modding toolkit"

[[bin]]
name = "MacPak"
path = "src/main.rs"

[dependencies]
# Internal
MacLarian = { path = "../MacLarian" }
MacPak = { path = "../MacPak" }

# GUI Framework
slint = { version = "1.14", default-features = false, features = ["backend-winit", "renderer-femtovg", "std", "compat-1-2"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File dialogs
rfd = "0.14"

# UUID generation
uuid = { version = "1.19", features = ["v4"] }

# Utilities
chrono = "0.4"
rand = "0.8"

# Error handling
anyhow = "1.0"

# JSON serialization
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
slint-build = "1.14"
