[package]
name = "macpak-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "MacPak"
path = "src/main.rs"

[dependencies]
floem = "0.2"
im = "15.1"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
roxmltree = "0.20"

# Internal crates
MacLarian = { path = "../MacLarian" }
MacPak = { path = "../MacPak" }

# File dialogs
rfd = "0.14"

# Directory traversal
walkdir = "2.4"

# Date/time formatting
chrono = "0.4"

# Regex for search
regex = "1.10"

# Lazy static for globals
lazy_static = "1.4"

# Random number generation for handles
rand = "0.8"

# Image handling for preview
image = "0.25"
dds = "0.2"

# For custom image view
floem_reactive = "0.2"
floem_renderer = "0.2"
